media/jellyseerr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media
spec:
  selector:
    app: jellyseerr
  type: ClusterIP
  ports:
    - name: http
      port: 5055
      targetPort: 5055
